--- a/content/content/about/content.mdx
+++ b/content/content/about/content.mdx
@@ -1,1 +1,1 @@
-We are a student-based, student-run Christian fellowship, serving the community at UTSC from all denominations and walks of life. Although we mainly cater to the Asian population, we welcome those from all different ethnicity and cultural backgrounds. Join us to learn more about Christ, strive to grow in faith, and be in community with fellow brothers and sisters.
+We are a student-based, student-run **Christian** fellowship, serving the community at UTSC from all denominations and walks of life. Although we mainly cater to the Asian population, we welcome those from all different ethnicity and cultural backgrounds. Join us to learn more about Christ, strive to grow in faith, and be in community with fellow brothers and sisters.
