refactor: bring ministries to main page

--- a/content/ministry/content.mdx
+++ b/content/ministry/content.mdx
@@ -1,10 +1,10 @@
-# Ministries
+Take a look at our events!
 
 <MinistryGrid>
   <Ministry
     name="Weekly Fellowship Meetings"
-    description="The main fellowship meeting for ACF. We meet every Wednesday from 5:00pm-7:00pm. Rooms TBA.
-"
+    image="/images/ministry/utsc_acf_winter2024_groupphoto.jpg"
+    description="The main fellowship meeting for ACF. We meet every Wednesday from 5:00pm-7:00pm. Rooms TBA."
   />
 
   <Ministry
@@ -13,7 +13,7 @@
 
 Rooms and times TBD, check our Instagram or contact Joshua for more details.
 "
-  />
+/>
 
   <Ministry
     name="Small Groups"
@@ -21,7 +21,7 @@ Rooms and times TBD, check our Instagram or contact Joshua for more details.
 
 Contact Davian for more details.
 "
-  />
+/>
 
   <Ministry
     name="JAW Week"
@@ -29,5 +29,6 @@ Contact Davian for more details.
 
 JAW will be held from Nov. 12-14, 2024. Come meet us in the BV Hallway between 11am-2pm!
 "
-  />
+/>
+
 </MinistryGrid>
