--- a/content/committee/content.mdx
+++ b/content/committee/content.mdx
@@ -12,4 +12,6 @@ The committee team for the 2024-2025 school year. Feel free to contact us if you
   <Committee name="Yong Le He" image="/images/committee/mmexport1725382012396.jpg" roles={["Treasurer"]} handles={[]} />
 
   <Committee name="Martin Tam" roles={["AFC Advisor"]} handles={[]} />
+
+  <Committee name="JJ Lee" roles={["Worship Coordinator"]} handles={[]} />
 </CommitteeGrid>
