--- a/content/committee/content.mdx
+++ b/content/committee/content.mdx
@@ -3,15 +3,15 @@
 The committee team for the 2024-2025 school year. Feel free to contact us if you have any questions!
 
 <CommitteeGrid>
-  <Committee name="Joshua Siu" roles={["Chair"]} handles={[]} />
+  <Committee name="Joshua Siu" image="/images/committee/IMG_20240904_002727_166.jpg" roles={["Chair"]} handles={[]} />
 
-  <Committee name="Jaki Shi" roles={["Social Coordinator"]} handles={[]} />
+  <Committee name="Jaki Shi" image="/images/committee/Attachment-1.jpg" roles={["Social Coordinator"]} handles={[]} />
 
-  <Committee name="Davian Lo" roles={["Small Group Coordinator"]} handles={[]} />
+  <Committee name="Davian Lo" image="/images/committee/IMG_2878.jpg" roles={["Small Group Coordinator"]} handles={[]} />
 
   <Committee name="Yong Le He" image="/images/committee/mmexport1725382012396.jpg" roles={["Treasurer"]} handles={[]} />
 
-  <Committee name="Martin Tam" roles={["AFC Advisor"]} handles={[]} />
+  <Committee name="Martin Tam" image="/images/committee/PXL_20230904_213933648.MP.jpg" roles={["AFC Advisor"]} handles={[]} />
 
-  <Committee name="JJ Lee" roles={["Worship Coordinator"]} handles={[]} />
+  <Committee name="JJ Lee" image="/images/committee/C2BDF354-19D2-4A25-8A11-E033C191EF41.jpg" roles={["Worship Coordinator"]} handles={[]} />
 </CommitteeGrid>
