--- a/content/ministry/content.mdx
+++ b/content/ministry/content.mdx
@@ -1,11 +1,7 @@
 Find out about our ministries below!
 
 <MinistryGrid>
-  <Ministry
-    name="Weekly Fellowship Meetings"
-    image="/images/ministry/utsc_acf_winter2024_groupphoto.jpg"
-    description="The main fellowship meeting for ACF. We meet every Wednesday from 5:00pm-7:00pm. Rooms TBA."
-  />
+  <Ministry name="Weekly Fellowship Meetings" image="/images/ministry/60793395-BE9D-4892-A050-FB9121CC34DE_1_105_c.jpg" description="The main fellowship meeting for ACF. We meet every Wednesday from 5:00pm-7:00pm. Rooms TBA." />
 
   <Ministry
     name="Prayer Meetings"
@@ -13,7 +9,7 @@ Find out about our ministries below!
 
 Rooms and times TBD, check our Instagram or contact Joshua for more details.
 "
-/>
+  />
 
   <Ministry
     name="Small Groups"
@@ -21,14 +17,14 @@ Rooms and times TBD, check our Instagram or contact Joshua for more details.
 
 Contact Davian for more details.
 "
-/>
+  />
 
   <Ministry
     name="JAW Week"
+    image="/images/ministry/DSC_6901 (1).jpg"
     description="Jesus Awareness Week (JAW) is a 3-day event hosted by multiple UTSC Christian Clubs. We will be hosting daytime and evening events to meet UTSC students, share our faith stories, discuss the big questions about life and faith, and praise our God on campus.
 
 JAW will be held from Nov. 12-14, 2024. Come meet us in the BV Hallway between 11am-2pm!
 "
-/>
-
+  />
 </MinistryGrid>
