refactor: rename .*Grid to .*Container

--- a/content/ministry/content.mdx
+++ b/content/ministry/content.mdx
@@ -1,6 +1,6 @@
 Find out about our ministries below!
 
-<MinistryGrid>
+<MinistryContainer>
   <Ministry name="Weekly Fellowship Meetings" image="/images/ministry/60793395-BE9D-4892-A050-FB9121CC34DE_1_105_c.jpg" description="The main fellowship meeting for ACF. We meet every Wednesday from 5:00pm-7:00pm. Rooms TBA." />
 
   <Ministry
@@ -27,4 +27,6 @@ Contact Davian for more details.
 JAW will be held from Nov. 12-14, 2024. Come meet us in the BV Hallway between 11am-2pm!
 "
   />
-</MinistryGrid>
+/>
+
+</MinistryContainer>
