--- a/content/vision/index.mdx
+++ b/content/vision/index.mdx
@@ -1,4 +1,4 @@
 ---
-year: 2024-2025
+year: 2025-2026
 ---
-# We see Jesus inviting us to flourish in community, loving our neighbours with every opportunity.
+# We see Jesus inviting us to endure in love through all circumstances, just as he does for us
