--- a/content/committee/content.mdx
+++ b/content/committee/content.mdx
@@ -1,17 +1,15 @@
 # Committee Team
 
-The committee team for the 2024-2025 school year. Feel free to contact us if you have any questions!
+The committee team for the 2025-2026 school year. Feel free to contact us if you have any questions!
 
 <CommitteeContainer>
-  <Committee name="Joshua Siu" image="/images/committee/IMG_20240904_002727_166.jpg" roles={["Chair"]} handles={[]} />
+  <Committee name="Joshua Siu" image="/images/committee/josh.jpg" roles={["Chair"]} handles={[]} />
 
-  <Committee name="Jaki Shi" image="/images/committee/Attachment-1.jpg" roles={["Social Coordinator"]} handles={[]} />
+  <Committee name="Jessie Lee" image="/images/committee/jessie.jpg" roles={["Social Coordinator"]} handles={[]} />
 
-  <Committee name="Davian Lo" image="/images/committee/IMG_2878.jpg" roles={["Small Group Coordinator"]} handles={[]} />
+  <Committee name="Ethan Yin" image="/images/committee/ethan.jpg" roles={["Small Group Coordinator"]} handles={[]} />
 
-  <Committee name="Yong Le He" image="/images/committee/mmexport1725382012396.jpg" roles={["Treasurer"]} handles={[]} />
+  <Committee name="Kiki Zhou" image="/images/committee/kiki.jpg" roles={["Treasurer"]} handles={[]} />
 
-  <Committee name="Martin Tam" image="/images/committee/PXL_20230904_213933648.MP.jpg" roles={["AFC Advisor"]} handles={[]} />
-
-  <Committee name="JJ Lee" image="/images/committee/C2BDF354-19D2-4A25-8A11-E033C191EF41.jpg" roles={["Worship Coordinator"]} handles={[]} />
+  <Committee name="Joseph Jiang" image="/images/committee/joe.jpg" roles={["Worship Coordinator"]} handles={[]} />
 </CommitteeContainer>
