--- a/content/ministry/content.mdx
+++ b/content/ministry/content.mdx
@@ -1,7 +1,7 @@
 Find out about our ministries below!
 
 <MinistryContainer>
-  <Ministry name="Weekly Fellowship Meetings" image="/images/ministry/60793395-BE9D-4892-A050-FB9121CC34DE_1_105_c.jpg" description="The main fellowship meeting for ACF. We meet every Wednesday from 5:00pm-7:00pm. Rooms TBA." />
+  <Ministry name="Weekly Fellowship Meetings" image="/images/ministry/group.jpg" description="The main fellowship meeting for ACF. We meet every Wednesday from 5:00pm-7:00pm. Rooms TBA." />
 
   <Ministry
     name="Prayer Meetings"
@@ -9,23 +9,23 @@ Find out about our ministries below!
 
 Rooms and times TBD, check our Instagram or contact Joshua for more details.
 "
-/>
+  />
 
   <Ministry
     name="Small Groups"
+    image="/images/ministry/small_groups.jpg"
     description="Are you looking for a space to grow deeper in your faith and connect with your brothers & sisters? Join our small groups! Small groups are a way to intentionally meet with your brothers/sisters in Christ outside of our weekly ACF programs. It is focused on discipleship and living out our vision: to grow in love for God and others.
 
-Contact Davian for more details.
+Contact Ethan for more details.
 "
-/>
+  />
 
   <Ministry
     name="JAW Week"
     image="/images/ministry/DSC_6901 (1).jpg"
     description="Jesus Awareness Week (JAW) is a 3-day event hosted by multiple UTSC Christian Clubs. We will be hosting daytime and evening events to meet UTSC students, share our faith stories, discuss the big questions about life and faith, and praise our God on campus.
 
-JAW will be held from Nov. 12-14, 2024. Come meet us in the BV Hallway between 11am-2pm!
+JAW dates are still TBD for the 2025-2026 school year, stay tuned!
 "
-/>
-
+  />
 </MinistryContainer>
