--- a/content/ministry/content.mdx
+++ b/content/ministry/content.mdx
@@ -5,6 +5,7 @@ Find out about our ministries below!
 
   <Ministry
     name="Prayer Meetings"
+    image="/images/ministry/prayer.jpg"
     description="Where we come as a community to pray together, hear what others have to pray, and help each other focus, even like how we might study together.
 
 Rooms and times TBD, check our Instagram or contact Joshua for more details.
@@ -27,5 +28,21 @@ Contact Ethan for more details.
 
 JAW dates are still TBD for the 2025-2026 school year, stay tuned!
 "
+  />
+
+  <Ministry
+    name="Study Sessions & Devos"
+    image="/images/ministry/devos.jpg"
+    description="Come join us as we spend time studying together. At the end of every study session, Julian will also be leading a short bible study or devo.
+
+Contact any comm member for more details."
+  />
+
+  <Ministry
+    name="ACF Gym"
+    image="/images/ministry/gym.jpg"
+    description="Weekly gym sessions for ACF!
+
+Contact Ethan for more!"
   />
 </MinistryContainer>
